# SimpleFTPServerAndClient

./: CMakeLists.txt  README.md
src/debug/: simple_err.cpp
src/exec/: ftp_srv.cpp
src/ftp/: cmd_parser.cpp  ftp_operations.cpp  response_layer.cpp
src/include/: ftp.h  network_session.h  response_layer.h  simple_err.h
src/network/: network_session.cpp
tests/: client_test.cpp  cmd_paraser_test.cpp  ftrace_test.cpp  response_layer_test.cpp  server_test.cpp
